@@ -1,15 +1,19 @@
 package gregtech.api.capability.impl;
 
-import gregtech.api.capability.IMaintenanceHatch;
+import gregtech.api.capability.IRotorHolder;
 import gregtech.api.metatileentity.multiblock.MultiblockAbility;
 import gregtech.api.metatileentity.multiblock.MultiblockWithDisplayBase;
 import gregtech.api.metatileentity.multiblock.ParallelLogicType;
 import gregtech.api.metatileentity.multiblock.RecipeMapMultiblockController;
-import gregtech.api.recipes.RecipeBuilder;
+import gregtech.api.recipes.Recipe;
 import gregtech.api.recipes.recipeproperties.IRecipePropertyStorage;
-import gregtech.common.ConfigHolder;
+import gregtech.api.util.TextFormattingUtil;
+import net.minecraft.util.Tuple;
+import net.minecraft.util.text.TextFormatting;
+import net.minecraftforge.fluids.FluidStack;
 
 import javax.annotation.Nonnull;
+import java.util.List;
 
 public class MultiblockFuelRecipeLogic extends MultiblockRecipeLogic {
 
@@ -20,28 +24,28 @@ public class MultiblockFuelRecipeLogic extends MultiblockRecipeLogic {
     }
 
     @Override
-    protected int[] runOverclockingLogic(@Nonnull IRecipePropertyStorage propertyStorage, int recipeEUt, long maxVoltage, int recipeDuration, int amountOC) {
+    protected void modifyOverclockPre(@Nonnull int[] values, @Nonnull IRecipePropertyStorage storage) {
+        // apply maintenance bonuses
+        Tuple<Integer, Double> maintenanceValues = getMaintenanceValues();
+
+        // duration bonus
+        if (maintenanceValues.getSecond() != 1.0) {
+            values[1] = (int) Math.round(values[1] / maintenanceValues.getSecond());
+        }
+    }
+
+    @Override
+    protected void modifyOverclockPost(int[] overclockResults, @Nonnull IRecipePropertyStorage storage) {
         // apply maintenance penalties
-        MultiblockWithDisplayBase displayBase = this.metaTileEntity instanceof MultiblockWithDisplayBase ? (MultiblockWithDisplayBase) metaTileEntity : null;
-        int numMaintenanceProblems = displayBase == null ? 0 : displayBase.getNumMaintenanceProblems();
+        Tuple<Integer, Double> maintenanceValues = getMaintenanceValues();
 
-        int[] overclock = null;
-        if (displayBase != null && ConfigHolder.machines.enableMaintenance && displayBase.hasMaintenanceMechanics()) {
-            IMaintenanceHatch hatch = displayBase.getAbilities(MultiblockAbility.MAINTENANCE_HATCH).get(0);
-            double durationMultiplier = hatch.getDurationMultiplier();
-            if (durationMultiplier != 1.0) {
-                overclock = new int[]{recipeEUt * -1, (int) Math.round(recipeDuration / durationMultiplier)};
-            }
-        }
-        if (overclock == null) {
-            overclock = new int[]{recipeEUt * -1, recipeDuration};
+        // duration penalty
+        if (maintenanceValues.getFirst() > 0) {
+            overclockResults[1] = (int) (overclockResults[1] * (1 - 0.1 * maintenanceValues.getFirst()));
         }
 
-        overclock[1] = (int) (overclock[1] * (1 - 0.1 * numMaintenanceProblems));
-
-        // no overclocking happens other than parallelization,
-        // so return the recipe's values, with EUt made positive for it to be made negative later
-        return overclock;
+        // make EUt negative so it is consumed
+        overclockResults[0] = -overclockResults[0];
     }
 
     @Nonnull
@@ -54,12 +58,6 @@ public class MultiblockFuelRecipeLogic extends MultiblockRecipeLogic {
     protected boolean hasEnoughPower(@Nonnull int[] resultOverclock) {
         // generators always have enough power to run recipes
         return true;
-    }
-
-    @Override
-    public void applyParallelBonus(@Nonnull RecipeBuilder<?> builder) {
-        // the builder automatically multiplies by -1, so nothing extra is needed here
-        builder.EUt(builder.getEUt());
     }
 
     @Override
@@ -78,6 +76,13 @@ public class MultiblockFuelRecipeLogic extends MultiblockRecipeLogic {
         return Integer.MAX_VALUE;
     }
 
+    /**
+     * Boost the energy production.
+     * Should not change the state of the workable logic. Only read current values.
+     *
+     * @param production the energy amount to boost
+     * @return the boosted energy amount
+     */
     protected long boostProduction(long production) {
         return production;
     }
@@ -93,8 +98,57 @@ public class MultiblockFuelRecipeLogic extends MultiblockRecipeLogic {
     }
 
     @Override
+    public int getInfoProviderEUt() {
+        return (int) boostProduction(super.getInfoProviderEUt());
+    }
+
+    @Override
+    public boolean consumesEnergy() {
+        return false;
+    }
+
+    @Override
     public void invalidate() {
         super.invalidate();
         totalContinuousRunningTime = 0;
+    }
+
+    public String getRecipeFluidInputInfo() {
+        IRotorHolder rotorHolder = null;
+
+        if (metaTileEntity instanceof MultiblockWithDisplayBase multiblockWithDisplayBase) {
+            List<IRotorHolder> abilities = multiblockWithDisplayBase.getAbilities(MultiblockAbility.ROTOR_HOLDER);
+            rotorHolder = abilities.size() > 0 ? abilities.get(0) : null;
+        }
+
+        // Previous Recipe is always null on first world load, so try to acquire a new recipe
+        Recipe recipe;
+        if (previousRecipe == null) {
+            recipe = findRecipe(Integer.MAX_VALUE, getInputInventory(), getInputTank());
+            if (recipe == null) return null;
+        } else {
+            recipe = previousRecipe;
+        }
+        FluidStack requiredFluidInput = recipe.getFluidInputs().get(0).getInputFluidStack();
+
+        int ocAmount = (int) (getMaxVoltage() / recipe.getEUt());
+        int neededAmount = ocAmount * requiredFluidInput.amount;
+        if (rotorHolder != null && rotorHolder.hasRotor()) {
+            neededAmount /= (rotorHolder.getTotalEfficiency() / 100f);
+        } else if (rotorHolder != null && !rotorHolder.hasRotor()) {
+            return null;
+        }
+        return TextFormatting.RED + TextFormattingUtil.formatNumbers(neededAmount) + "L";
+    }
+
+    public FluidStack getInputFluidStack() {
+        // Previous Recipe is always null on first world load, so try to acquire a new recipe
+        if (previousRecipe == null) {
+            Recipe recipe = findRecipe(Integer.MAX_VALUE, getInputInventory(), getInputTank());
+
+            return recipe == null ? null : getInputTank().drain(new FluidStack(recipe.getFluidInputs().get(0).getInputFluidStack().getFluid(), Integer.MAX_VALUE), false);
+        }
+        FluidStack fuelStack = previousRecipe.getFluidInputs().get(0).getInputFluidStack();
+        return getInputTank().drain(new FluidStack(fuelStack.getFluid(), Integer.MAX_VALUE), false);
     }
 }
